# megapaladin

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  megapaladin.ino
doc/: signals.ods
hw/pcb/: .gitignore  fp-lib-table  modules.kicad_sym  pcb.kicad_pcb  pcb.kicad_pro  pcb.kicad_sch  report.txt  sym-lib-table
hw/pcb/footprints.pretty/: cheap_lvl_shifter_4ch.kicad_mod
hw/pcb/gerber/: pcb-B_Cu.gbr  pcb-B_Mask.gbr  pcb-B_Paste.gbr  pcb-B_Silkscreen.gbr  pcb-Edge_Cuts.gbr  pcb-F_Cu.gbr  pcb-F_Mask.gbr  pcb-F_Paste.gbr  pcb-F_Silkscreen.gbr  pcb-NPTH.drl  pcb-PTH.drl  pcb-job.gbrjob
hw/pcb/production/: netlist.ipc
megapaladin/: fifo_cmd.h  megapaladin.ino  secrets_example.h
src/: bt_platform.c  bt_platform.h  btstack_config.h  button.c  button.h  core0.c  core1.c  defs.h  main.c  ports.c  ports.h  sdkconfig.h  support.c  support.h  utils.c  utils.h
v1_old/: core1.h  megapaladin.ino
